--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -164,7 +164,7 @@ services:
         POLYGON_API_KEY: V4_aPjfLf3uRm1v8EO3SRFvJfOM4WtDp
         SPRING_PROFILES_ACTIVE: ws-mock
         STOCKS_WS_MOCK: "true"
-        MOCK_WS_PERIOD_MS: "1000"
+        MOCK_WS_PERIOD_MS: "10000"
       depends_on:
         - historical-analytics-service
       networks:
@@ -184,6 +184,7 @@ services:
     image: gradle:8.14.1-jdk17
     profiles: [ "tests" ]
     working_dir: /work
+    user: "${UID}:${GID}"
     volumes:
       - ./load-tests:/work
     depends_on:
@@ -193,15 +194,15 @@ services:
       net.ipv4.tcp_tw_reuse: "1"
     ulimits:
       nofile:
-        soft: 262144
-        hard: 262144
+        soft: 1048576
+        hard: 1048576
     environment:
       BASE_URL: http://api-gateway:8080
       WS_BASE_URL: ws://api-gateway:8080
-      START_CONC: "10"
-      TARGET_CONC: "300"
-      RAMP_MIN: "10"
-      HOLD_MIN: "15"
+      START_CONC: "100"
+      TARGET_CONC: "1000"
+      RAMP_MIN: "5"
+      HOLD_MIN: "30"
       RAMPDOWN_SEC: "60"
     command: >
       ./gradlew gatlingRun
