--- a/company-info-service/src/main/resources/application.yml
+++ b/company-info-service/src/main/resources/application.yml
@@ -97,6 +97,10 @@ resilience4j:
         max-concurrent-calls: 30
         max-wait-duration:
           seconds: 0
+      companySearch:
+        max-concurrent-calls: 256
+        max-wait-duration:
+          seconds: 0
 
 springdoc:
   api-docs:
