--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,15 +51,15 @@ services:
     networks:
       - stocknet
 
-  frontend:
-    build: ./frontend
-    container_name: frontend
-    ports:
-      - "5173:80"
-    depends_on:
-      - api-gateway
-    networks:
-      - stocknet
+#  frontend:
+#    build: ./frontend
+#    container_name: frontend
+#    ports:
+#      - "5173:80"
+#    depends_on:
+#      - api-gateway
+#    networks:
+#      - stocknet
 
   api-gateway:
     build: ./api-gateway
@@ -200,10 +200,10 @@ services:
       BASE_URL: http://api-gateway:8080
       WS_BASE_URL: ws://api-gateway:8080
       START_CONC: "100"
-      TARGET_CONC: "1000"
+      TARGET_CONC: "1500"
       RAMP_MIN: "5"
-      HOLD_MIN: "30"
-      RAMPDOWN_SEC: "60"
+      HOLD_MIN: "15"
+      RAMPDOWN_SEC: "0"
     command: >
       ./gradlew gatlingRun
       -Dgatling.simulationClass=example.MasterRouteSimulation
